Updated email reporting system and dependencies